                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 09-01-2006 added: additional fourcc codes in codec.conf
  - 09-01-2006 added: ffmpeg data padding patch ( malloc padding to avoid access beyond allocated memory ) , hopefully fixes fast wmv's. 
  - 09-01-2006 changed: explicitly disabled gif and jpeg instead of relying on autodetection
  - 09-01-2006 fixed: xbmc wasn't compilable with mingw5, due to missing sleep function
  - 01-01-2006 updated: libmp3 to mplayerhq cvs version as of now. fixes some mpegs that where only playing static audio
  - 04-10-2005 updated: ffmpeg to mplayerhq cvs version as of now. fixes a few avi's that where causing problems + a few other stuff
  - 06-09-2005 reverted: when resuming normal playback speed, video would jump ahead a couple of seconds. didn't work well
  - 22-08-2005 updated: libvorbis interface to mplayer cvs (ad_libvorbis.c:1.18), fixes vorbis decoding in both matroska and ogm containers
  - 22-08-2005 updated: matroska demuxer to mplayerhq cvs (demux_mkv.c:1.45)
  - 17-08-2005 fixed: mplayer would crash if no video decoder was found for a media that did contain video, instead of just playing the audio
  - 16-08-2005 added: display progress when parsing vobsubs
  - 12-08-2005 fixed: when resuming normal playback speed, video would jump ahead a couple of seconds
  - 12-08-2005 changed: detection of interlaced material somewhat improved
  - 12-08-2005 changed: made rewind search for the right time pos after a seek by dropping frames after seek untill at righ position
  - 07-08-2005 updated codec.conf [ 1252569 ]
  - 06-08-2005 fixed: OGG files often crashed on exit or failed on open. Updated demux_ogg from mplayerhq cvs.